# RTv1

./: CMakeLists.txt  Makefile
gnl/: get_next_line.d
include/: RTv1.h
libft/: Makefile  ft_abs.c
src/: ft_color.c  main.c
